Refatorar o cadastro do usuário com validação do CEP